# lscite

./: .gitignore  create_superuser.py  pyproject.toml
common/: models.py
config/: settings.py  urls.py
contacts/: admin.py  models.py  serializers.py  urls.py  views.py
contacts/migrations/: 0001_initial.py  0002_alter_contact_owner.py  0003_alter_contact_description_alter_contact_name.py  0004_alter_contact_name_contact_unique_contact.py
emails/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
emails/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
frontend/: package.json
frontend/src/: api.tsx  index.tsx  router.tsx  theme.tsx  types.d.ts
frontend/src/components/: CustomMailBox.tsx  Header.tsx  LoginModal.tsx  LoginOptions.tsx  MailList.tsx  MailTableList.tsx  Root.tsx  SessionErrorModal.tsx  SideMenuBar.tsx  (+2 more)
mails/: admin.py  models.py
mails/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
occupations/: admin.py  apps.py  models.py  serializers.py
occupations/migrations/: 0001_initial.py  0002_alter_department_group_alter_department_team.py
postboxes/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
postboxes/migrations/: 0001_initial.py  0002_initial.py  0003_alter_postbox_description.py
postboxs/: apps.py  models.py
postboxs/migrations/: 0001_initial.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_email.py  0002_alter_user_language.py  0003_emailaddress_type.py  0003_rename_usermail_useremail.py
(+12 files in other folders)
