[tool.poetry]
name = "lsc"
version = "0.1.0"
description = ""
authors = ["Jaehong-Daniel-Kim <jaehong.daniel.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.7"
pillow = "^10.4.0"
djangorestframework = "^3.15.2"
django-cors-headers = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
